--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 
 
 <div id="user_nav">
+  <% if @user && @user.role?(:administrator) %>
   <% if current_user %>
       Logged in as <%= current_user.email %>
       <%= link_to "Log out", log_out_path %>
