--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,10 @@
 
 
 <div id="user_nav">
-  <% if @user && @user.role?(:administrator) %>
+
   <% if current_user %>
-      Logged in as <%= current_user.email %>
+      welcome to as <%= current_user.name %>
+
       <%= link_to "Log out", log_out_path %>
   <% else %>
       <%= link_to "Sign up", sign_up_path %> or
