--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,8 +6,7 @@
 
     <th>name</th>
     <th>email</th>
-    <th>password</th>
-    <th>password_confirmation</th>
+
 
 
   </tr>
@@ -17,8 +16,8 @@
       <tr>
         <td><%= user.name %></td>
         <td><%= user.email %></td>
-        <td><%= user.password %></td>
-        <td><%= user.password_confirmation %></td>
+        <td><%#= user.password %></td>
+        <td><%#= user.password_confirmation %></td>
 
 
 
