--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,19 @@
-<h1>User Page</h1>
+<img src="/images/242x82.png"> </img>
 
-<%= form_for @user do |f| %>
+
+<div class="signup_block">
+
+
+  <%= form_for @user do |f| %>
+
+      <div class="section_block" id="section_block">
+        <div class="login_content">
+          <div class="login-head">
+            <h1>User Page</h1>
+          </div><!--login-head-->
+
+
+
     <% if @user.errors.any? %>
         <div class="error_messages">
           <h2>User is invalid</h2>
@@ -11,24 +24,30 @@
           </ul>
         </div>
     <% end %>
-    <p>
-      <%= f.label :name %><br />
+    <div class="form-group">
+      <%= f.label :name %>
       <%= f.text_field :name %>
-    </p>
-    <p>
-      <%= f.label :email %><br />
+    </div>
+    <div class="form-group">
+      <%= f.label :email %>
       <%= f.email_field :email %>
-    </p>
-    <p>
-      <%= f.label :password %><br />
+    </div>
+    <div class="form-group">
+      <%= f.label :password %>
       <%= f.password_field :password %>
-    </p>
-    <p>
-      <%= f.label :password_confirmation %><br />
+    </div>
+    <div class="form-group">
+      <%= f.label :password_confirmation %>
       <%= f.password_field :password_confirmation %>
-    </p>
+    </div>
+    <div class="form-group">
+      <%= f.label :role %>
+      <%= collection_select(:user, :role_id, Role.all , :id, :name, prompt: true) %>
+    </div>
 
 
-
-    <p class="button"><%= f.submit %></p>
-<% end %>
+    <div class="button"><%= f.submit %></div>
+        </div>
+      </div>
+  <% end %>
+</div>
